# radiance-conversion

./: CHANGES  CMakeLists.txt  DEVA-jpeg.c  DEVA-jpeg.h  DEVA-png.c  DEVA-png.h  FOV.c  FOV.h  INSTALLATION  LICENSE  Mac-build-script  README  TT-jpeg.c  TT-jpeg.h  TT-sRGB.c  TT-sRGB.h  Windows-build-script  devas-jpeg.c  devas-jpeg.h  devas-png.c  devas-png.h  devas-sRGB.c  distclean  iccjpeg.c  iccjpeg.h  make-rad-test-image.c  rad2jpeg.c  rad2png.c  rad2tiff.c  radiance-conversion-version.h  radiance-tiff.c  radiance-tiff.h  radianceIO.c  sRGB.c  sRGB.h  sRGB_IEC61966-2-1-linear.c  sRGB_IEC61966-2-1_ICC.c  sRGB_IEC61966-2-1_black_scaled.c  sRGB_radiance.h  tiff2rad.c  (+5 more)
CMake/: FindEXIF.cmake  FindEXIF_Mac.cmake  FindEXIF_Windows.cmake  FindJPEG_Mac.cmake  FindJPEG_Windows.cmake  FindLZMA_Mac.cmake  FindTIFF_Mac.cmake  FindTIFF_Windows.cmake
Mac-binaries/: README-MacOS  make-rad-test-image  rad2jpeg  rad2png  rad2tiff  tiff2rad  tiff32_to_8
Mac-binaries/man/: make-pdf-man-pages  rad2tiff.1  tiff2rad.1
Windows-binaries/: README-Windows
external-libs/libexif-master/: Makefile.in  aclocal.m4  config.h.in  configure
external-libs/libexif-master/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
external-libs/libexif-master/binary/: Makefile.in
external-libs/libexif-master/contrib/: Makefile.in
external-libs/libexif-master/contrib/examples/: Makefile.in
external-libs/libexif-master/doc/: Makefile.in
external-libs/libexif-master/libexif/: Makefile.in
external-libs/libexif-master/m4m/: Makefile.in
external-libs/libexif-master/test/: Makefile.in
external-libs/libexif-master/test/nls/: Makefile.in
external-libs/tiff-4.0.9/: CMakeLists.txt  Makefile  config.status
external-libs/tiff-4.0.9/CMake/: FindJPEG_Mac_forTIFF.cmake  FindJPEG_Windows_forTIFF.cmake  FindZLIB_Mac_forTIFF.cmake  FindZLIB_Windows_forTIFF.cmake
man/: make-pdf-man-pages  rad2jpeg.1  rad2png.1  rad2tiff.1  tiff2rad.1  tiff32_to_8.1
